* Improved console output and removed QDebug occurrences.
* Improved console output formatting using field width.
* Fixed missing break in switch.
* Added comparable score to Benchmark.
* Added a vector proxy class forwarding to Eigen.
* Replaced all arithmetic by assignment vector operations.
* Replaced Eigen library by custom vector implementation.
* Removed Eigen dependency occurrences.

SphereSim 3.0.2:
* Fixed Viewer linking.
* Fixed Eigen package name in PKGBUILDs.
* Updated build script and added .travis.yml file.
* Updated .travis.yml file.
* Updated build files.
* Updated .travis.yml file.
* Updated build files and fixed compilation issues.
* Improved .travis.yml file.
* Updated .travis.yml file.
* Updated build files and fixed compilation issues.
* Added build type switch and improved warning output.
* Improved build time by reusing globally built files.
* Improved code style and fixed compiler warnings.
* Improved Object class by using Visitors instead of preprocessor macros.

SphereSim 3.0.1:
* Corrected version number.
* Removed local ObjectTester from clients.
* Updated license information and fixed mingw-w64 PKGBUILD.
* Fixed minor code issues.

SphereSim 3.0.0:
* Improved package releasing script and added automatic version number.
* Added NO_OPENMP flag to control OpenMP in server.
* Added automatic variable transmission. Incompatible to prior versions.

SphereSim 2.5.1:
* Improved build scripts and added OpenMP flag to Server.pro.
* Improved SimulationWorker and WorkQueue of server and fixed segfaults.

SphereSim 2.5.0:
* Improved Server to execute all actions in a queue.
* Added methods to clients to react on server disconnection.
* Improved Viewer windows: removed version from title and fixing size.
* Added comparison of adaptive and static stepsize to Tester.
* Added QMake build files.

SphereSim 2.4.4:
* Added Array class and modified TwoDimArray to use the new class. No speed change.