@@ -31,6 +31,7 @@
 * Replaced all arithmetic by assignment vector operations.
 * Replaced Eigen library by custom vector implementation.
 * Removed Eigen dependency occurrences.
+* Added macros and assertions to TwoDimArray class.
 
 SphereSim 3.0.2:
 * Fixed Viewer linking.
